# test-assemblyscript

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json
assembly/: index.ts
cpp/: CMakeLists.txt  emcc-build.sh  image_processor.cpp  main.js
cpp/html_template/: shell_minimal.html
cpp/src/: main.cpp
